<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/secondaryText"
        android:contentDescription="@string/image_desc"
        android:src="@drawable/ic_sad" />

    <LinearLayout
        android:id="@+id/top_options"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimiry"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/brightness_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:background="@drawable/button_selector"
            android:contentDescription="@string/brightness"
            android:src="@mipmap/ic_brightness" />

        <ImageButton
            android:id="@+id/crop_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:background="@drawable/button_selector"
            android:contentDescription="@string/crop"
            android:src="@mipmap/ic_crop" />

        <ImageButton
            android:id="@+id/rotate_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:background="@drawable/button_selector"
            android:contentDescription="@string/rotate"
            android:src="@mipmap/ic_rotate" />

        <ImageButton
            android:id="@+id/filters_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:background="@drawable/button_selector"
            android:contentDescription="@string/filters"
            android:src="@mipmap/ic_cut" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_options"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimiry"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:background="@drawable/button_selector"
            android:contentDescription="@string/back"
            android:src="@mipmap/ic_back" />


        <ImageButton
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:background="@drawable/button_selector"
            android:contentDescription="@string/save"
            android:src="@mipmap/ic_save" />
    </LinearLayout>

</merge>