<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/secondaryText"
        android:contentDescription="@string/processed_image"
        android:src="@drawable/ic_sad" />


    <LinearLayout
        android:id="@+id/slider_module"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimiry"
        android:orientation="vertical">

        <SeekBar
            android:id="@+id/slider"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimiry"
            android:max="360"
            android:progress="0" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimiry"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/rotate_left_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/colorPrimiry"
                android:contentDescription="@string/rotate_left"
                android:src="@mipmap/ic_rotate_left" />

            <ImageButton
                android:id="@+id/rotate_right_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/colorPrimiry"
                android:contentDescription="@string/rotate_right"
                android:src="@mipmap/ic_rotate" />
        </LinearLayout>
    </LinearLayout>

    <include
        android:id="@+id/bottom_bar_ref"
        layout="@layout/bottom_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" />

</merge>